--- a/public/views/nav.html
+++ b/public/views/nav.html
@@ -1,7 +1,7 @@
 <div class="top-nav">
   <div class="content">
     <div class="top-nav-left">
-      <img class="logo" src="https://firebasestorage.googleapis.com/v0/b/blockchain-215cc.appspot.com/o/Gitlab-group-logo-b.png?alt=media&token=e7c5900c-8a7f-4d39-a166-62070d696c72" style="width: 40px; float: left;" alt="hero logo" />
+      <img class="logo" src="https://firebasestorage.googleapis.com/v0/b/blockchain-215cc.appspot.com/o/Gitlab-group-logo-b.png?alt=media&token=e7c5900c-8a7f-4d39-a166-62070d696c72" alt="hero logo" />
       <ul class="nav navbar-nav">
         <li class="link-item"><a href="#education" ng-click="switchView('education')">Education</a></li>
         <li class="link-item"><a href="#investing" ng-click="switchView('investing')">Investing</a></li>
