fixing approving posts

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -105,7 +105,7 @@
               <div class="sb-template" style="color:black"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> Approve Company</div>
             </button>
           </div>
-          <h2>{{ selectedCompany.name }}<span ng-if="selectedCompany.productName"> - {{ selectedCompany.productName }}</span> <span>{{ selectedCompany.$id }}</span></h2>
+          <h2>{{ selectedCompany.name }}<span ng-if="selectedCompany.productName"> - {{ selectedCompany.productName }}</span></h2>
           <i ng-click="hideCompanyModal()" class="fa fa-times closeModal" aria-hidden="true"></i>
           <div class="row">
             <div class="carousel-wrapper col-md-12">
