seperating post columns in db

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,5 +1,7 @@
 <nav></nav>
-
+<!-- - - - - - ->
+  Banner
+< - - - - - - -->
 <div class="col" id="center">
   <section class='banner'>
     <div class='deal-banner-logo'>
