--- a/public/views/createModal.html
+++ b/public/views/createModal.html
@@ -11,9 +11,7 @@
         <div ng-if="currentView == 'educationView'">
           <form name="submissionForm" class="modalForm" ng-controller='PostController' ng-submit="createCompany('education')">
             <div class="col-md-12">
-              <h2 ng-if="educationView" class="text-center">Submit an Education Post</h2>
-              <h2 ng-if="investingView" class="text-center">Submit an Investing Post</h2>
-              <h2 ng-if="comingSoonView" class="text-center">Submit a Coming Soon Post</h2>
+              <h2 class="text-center">Submit an Education Post</h2>
             </div>
             <div class="row">
               <div class="col-md-6">
@@ -147,9 +145,7 @@
         <div ng-if="currentView == 'investingView'">
           <form name="submissionForm" class="modalForm" ng-controller='PostController' ng-submit="createCompany('investing')">
             <div class="col-md-12">
-              <h2 ng-if="educationView" class="text-center">Submit an Education Post</h2>
-              <h2 ng-if="investingView" class="text-center">Submit an Investing Post</h2>
-              <h2 ng-if="comingSoonView" class="text-center">Submit a Coming Soon Post</h2>
+              <h2 class="text-center">Submit an Investing Post</h2>
             </div>
             <div class="row">
               <div class="col-md-6">
@@ -283,9 +279,7 @@
         <div ng-if="currentView == 'comingSoonView'">
           <form name="submissionForm" class="modalForm" ng-controller='PostController' ng-submit="createCompany('comingSoon')">
             <div class="col-md-12">
-              <h2 ng-if="educationView" class="text-center">Submit an Education Post</h2>
-              <h2 ng-if="investingView" class="text-center">Submit an Investing Post</h2>
-              <h2 ng-if="comingSoonView" class="text-center">Submit a Coming Soon Post</h2>
+              <h2 class="text-center">Submit a Coming Soon Post</h2>
             </div>
             <div class="row">
               <div class="col-md-6">
