--- a/public/views/nav.html
+++ b/public/views/nav.html
@@ -3,9 +3,9 @@
     <div class="top-nav-left">
       <img class="logo" src="https://firebasestorage.googleapis.com/v0/b/blockchain-215cc.appspot.com/o/Gitlab-group-logo-b.png?alt=media&token=e7c5900c-8a7f-4d39-a166-62070d696c72" alt="hero logo" />
       <ul class="nav navbar-nav">
-        <li class="link-item"><a href="#education" ng-click="switchView('education')">Education</a></li>
-        <li class="link-item"><a href="#investing" ng-click="switchView('investing')">Investing</a></li>
-        <li class="link-item"><a href="#comingSoon" ng-click="switchView('comingSoon')">Coming Soon</a></li>
+        <li class="link-item"><a href="" ng-click="switchView('education')">Education</a></li>
+        <li class="link-item"><a href="" ng-click="switchView('investing')">Investing</a></li>
+        <li class="link-item"><a href="" ng-click="switchView('comingSoon')">Coming Soon</a></li>
       </ul>
     </div>
     <div class="top-nav-right" ng-controller="LoginCtrl">
