cleaning up sharing

--- a/public/views/createModal.html
+++ b/public/views/createModal.html
@@ -2,8 +2,10 @@
   <div class="modal-dialog createModal">
     <div class="modal-content">
       <div class="leaveModal mar10" ng-controller='listCtrl' ng-click="cancelCreateModal()">
-        <svg class="animated zoomIn pull-right" width=".5cm" height=".5cm" viewBox="0 0 400 400"> <g stroke="#999999"><line x1="100" y1="300" x2="300" y2="100" stroke-width="20"></line> <line x1="100" y1="100" x2="300" y2="300" stroke-width="20"></line></g></svg><i class="icon-remove"></i>
+        <!-- <svg class="animated zoomIn pull-right" width=".5cm" height=".5cm" viewBox="0 0 400 400"> <g stroke="#999999"><line x1="100" y1="300" x2="300" y2="100" stroke-width="20"></line> <line x1="100" y1="100" x2="300" y2="300" stroke-width="20"></line></g></svg><i class="icon-remove"></i> -->
+        <i class="fa fa-times closeModal black" aria-hidden="true"></i>
       </div>
+
       <div class="modal-body mar20t">
         <!-- - - - - - ->
           Education Posts
