--- a/public/views/main.html
+++ b/public/views/main.html
@@ -138,6 +138,15 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-md-12 mg-b-md tag-container">
+              <ul class="_tags blue">
+                <li ng-repeat="tag in selectedCompany.tags track by $index">
+                  <a href="">{{ tag.text }} <span>4</span></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-md-12">
               <h4>Score: {{ selectedCompany.totalDonated + selectedCompany.totalVotes + selectedCompany.facebookShares + selectedCompany.twitterShares }}</h4>
             </div>
