--- a/public/views/main.html
+++ b/public/views/main.html
@@ -103,7 +103,7 @@
             <div class="col-md-12 mg-b-md tag-container">
               <ul class="_tags blue">
                 <li ng-repeat="tag in selectedPost.tags track by $index">
-                  <a href="">{{ tag.text }} <span>{{ getTagCount }}</span></a>
+                  <a href="" >{{ tag.text }} <span></span></a>
                 </li>
               </ul>
             </div>
